# pycross_venv_bug_repro

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md
